--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,6 @@
-<div class="w-full flex">
+<div class="w-full flex mt-10">
     <div class="max-sm:w-10/12 flex flex-col">
         <app-shopping-list-edit></app-shopping-list-edit>
-        <hr>
         <p>The List</p>
     </div>
 </div>
