--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,16 +1,21 @@
 <div class="w-full flex flex-col gap-5">
     <div>
-        <button mat-flat-button color="primary">New Recipe</button>
+        <button mat-flat-button
+        color="primary">New Recipe</button>
     </div>
 
-    <div class="w-full">
-        <a href="#" class="w-full flex justify-between items-center p-4 border-1 border-slate-200 rounded-md hover:bg-slate-100 transition-all">
+    <div class="w-full flex flex-col gap-2">
+        @for (recipe of recipes; track $index) {
+        <a href="#"
+        class="w-full flex justify-between items-center p-4 border-1 border-slate-200 rounded-md hover:bg-slate-100 transition-all">
             <div class="flex flex-col gap-2">
-                <h4 class="text-lg font-semibold">Recipe Name</h4>
-                <p>Description</p>
+                <h4 class="text-lg font-semibold">{{ recipe.name }}</h4>
+                <p>{{ recipe.description }}</p>
             </div>
-            <img class="w-24 h-16 rounded-lg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4iRgpUe5m7xPQpU_VDsrlYzDrg6b8R0JUfTcAL3OQaw&s"
-                alt="recipe img">
+            <img class="size-20 rounded-lg"
+            [src]="recipe.imagePath"
+            alt="{{ recipe.name }}" />
         </a>
+        }
     </div>
 </div>
