--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex md:flex-row max-md:flex-col">
+<div class="w-full flex md:flex-row max-md:flex-col gap-20">
     <div class="lg:w-5/12 max-lg:w-full">
         <app-recipe-list></app-recipe-list>
     </div>
